# personal-assistant

./: .gitignore  README.md  pyproject.toml  railway.json  requirements.txt
app/: __init__.py  config.py  db.py  handlers.py  main.py  models.py  parser.py  reminder_catalog.py  scheduler.py  schemas.py  seed_reminders.py  telegram_client.py  twilio_client.py
tests/: conftest.py  test_api.py  test_config.py  test_handlers.py  test_parser.py  test_scheduler.py  test_seed_reminders.py
