[project]
name = "personal-telegram-health-assistant"
version = "0.1.0"
description = "Personal Telegram reminder assistant MVP using FastAPI, SQLite, APScheduler, and Telegram Bot API."
requires-python = ">=3.10"
dependencies = [
  "apscheduler>=3.10,<4",
  "fastapi>=0.110,<1",
  "httpx>=0.27,<1",
  "pydantic>=1.10,<3",
  "psycopg2-binary>=2.9,<3",
  "sqlalchemy>=2.0,<3",
  "uvicorn[standard]>=0.29,<1",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
